--- a/gb/25/1/16/n14415219.md
+++ b/gb/25/1/16/n14415219.md
@@ -5,26 +5,26 @@
 <h6></h6>
 <hr>
 <p>【大纪元2025年01月17日讯】（大纪元记者周行多伦多报导）为应对美国候任总统川普提出的25%关税威胁，加拿大总理特鲁多于周四宣布成立一个加美关系委员会。这一举措旨在强化加美关系并制定应对策略。</p>
-<p><strong>委员会成员汇聚各界精英</strong></p>
+<h3><strong>委员会成员汇聚各界精英</strong></h3>
 <p>1月16日，总理办公室在新闻公告中公布了该委员会的18名成员名单，其中包括：</p>
 <ul>
-<li><strong>前魁北克省省长</strong>庄社理（Jean Charest）；</li>
-<li><strong>前亚伯塔省省长</strong>雷切尔·诺特利（Rachel Notley）；</li>
-<li><strong>商界领袖</strong>阿琳·迪金森（Arlene Dickinson）；</li>
-<li><strong>工会Unifor全国主席</strong>拉娜·佩恩（Lana Payne）；</li>
-<li><strong>汽车零部件制造商协会主席</strong>弗拉维奥·沃尔普（Flavio Volpe）；</li>
-<li><strong>加拿大首席CUSMA谈判代表</strong>史蒂夫·弗赫尔（Steve Verheul）。</li>
+<li>前魁北克省省长庄社理（Jean Charest）；</li>
+<li>前亚伯塔省省长雷切尔·诺特利（Rachel Notley）；</li>
+<li>商界领袖阿琳·迪金森（Arlene Dickinson）；</li>
+<li>工会Unifor全国主席拉娜·佩恩（Lana Payne）；</li>
+<li>汽车零部件制造商协会主席弗拉维奥·沃尔普（Flavio Volpe）；</li>
+<li>加拿大首席CUSMA谈判代表史蒂夫·弗赫尔（Steve Verheul）。</li>
 </ul>
 <p>公告中指出，该委员会成员来自商界、创新和政策领域，他们将运用自身行业专业知识，为总理及内阁在这一关键时期提供支持和建议。</p>
-<p><strong>联邦与省区达成初步应对计划</strong></p>
+<h3><strong>联邦与省区达成初步应对计划</strong></h3>
 <p>本周三，特鲁多与各省及特区领袖举行会议，讨论如何应对美国政府可能对加拿大商品加征关税的威胁。经过长时间的讨论，联邦与地方政府达成一致性应对措施，包括：</p>
 <ol>
-<li><strong>对美国商品征收报复性关税</strong>；</li>
-<li><strong>探讨如何将关税收入分配给受影响行业</strong>。</li>
+<li>对美国商品征收报复性关税；</li>
+<li>探讨如何将关税收入分配给受影响行业。</li>
 </ol>
-<p><strong>亚伯塔省表态：拒绝参与能源相关关税</strong></p>
+<h3><strong>亚伯塔省表态：拒绝参与能源相关关税</strong></h3>
 <p>尽管大多数省长支持统一的“加拿大队”对外阵线，但亚伯塔省省长戴思敏（Danielle Smith）拒绝签署联合声明。</p>
-<p>戴思敏在会后明确表示，亚伯塔省反对将对美能源出口关税作为谈判筹码。她在社交媒体X平台上发文称：“亚伯塔省绝不同意对我们的能源或其他产品征收出口关税，也不支持禁止出口这些产品。我们将采取一切必要措施，保护亚省人的生计免受此类破坏性联邦政策的影响。”</p>
+<p>戴思敏在会后明确表示，亚伯塔省反对将对美能源出口关税作为谈判筹码。她在社交媒体X平台上发文称：“亚伯塔省绝不同意对我们的能源或其它产品征收出口关税，也不支持禁止出口这些产品。我们将采取一切必要措施，保护亚省人的生计免受此类破坏性联邦政策的影响。”</p>
 <p>此次加美关系委员会的成立，标志着加拿大在面临潜在贸易冲突时采取的预防性措施。随着美加贸易摩擦的升级，各界将密切关注委员会的策略是否能有效化解冲突并保护加拿大经济利益。</p>
 <p>责任编辑：岳怡</p>
 <strong>相关新闻：</strong>
@@ -33,34 +33,33 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406798.md#1">前央行行长马克·卡尼可能参选自由党领袖</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411952.md#1">外交部长：应对关税威胁 不排除切断对美供电</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414316.md#1">民调：自由党党领之争 牵动加美关系忧虑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14415201.md#1">卫生部：加拿大将继续使用美国禁用的赤藻红</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14415172.md#1">安省政府宣布计划在霍普港建设大型核电站</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14415170.md#1">加拿大联邦大选领袖辩论新规则出台</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414403.md#1">近半加拿大人的最大挑战：通胀和生活成本</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414393.md#1">人口贩卖 安省儿童性交易幸存者的真实故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546045.md#1">川普《大而美法案》影响加拿大的4个方面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546041.md#1">法官下令公开“自由车队”抗议者银行冻结记录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546033.md#1">加强合作挑战政策 安省和亚省携手推动经济</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546029.md#1">雨夜神秘光球 亚省夫妻拍下罕见“球状闪电”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546027.md#1">上任后首次参加牛仔节 总理卡尼翻松饼“失手”</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/15/n9844503.md#1" target="_blank">毛泽东诗词的“血旗情结”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/7/n11574300.md#1" target="_blank">他们为我们的生活带来光明（2）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/23/n10420856.md#1" target="_blank">林辉：李大钊误导北大学生同时也在卖国</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/7/n10767290.md#1" target="_blank">美18位参议员联合发声 谴责中共打压宗教</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410876.md#1">【未解之谜】触摸UFO 美军人意外接获神秘信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/2/n14404364.md#1">清朝名臣方观承官至总督 相士早预知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405076.md#1">人算不如天算 嫉妒心反害了自身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402150.md#1">元配宽容不伦婢女得到福报 正直知县因一念不容下场凄惨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781563.md#1">在宋朝作诗能转运？宋祁错失状元得赐婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414250.md#1">【新闻大破解】中共秘战四面树敌 民主国家反制</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414301.md#1">【纪元焦点】缅甸电诈中共操盘？金融界传降薪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414360.md#1">【菁英论坛】KK园区成人间地狱 全是中共黑手套</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412879.md#1">中国修车店技师因维修电动车电池获刑半年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413288.md#1">胡春华一直遭围剿 传胡锦涛硬顶死保</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413064.md#1">分析：中国民众为何对经济失去信心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412852.md#1">请黄晓明呵护赵丽颖 李冰冰温暖话语登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14413952.md#1">DC电影《超少女：明日之女》开拍 2026年上映</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413559.md#1">被传洛杉矶两套豪宅被烧毁 冯小刚回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412785.md#1">好莱坞明星救济受灾户 裘莉开放豪宅收容亲友</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14413620.md#1">野火仍肆虐 李奥纳多搭私人飞机离开加州惹议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412475.md#1">研究：人们常吃的海鲜中含有塑胶微粒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14409423.md#1">百岁人瑞常吃食物前10名 选对食物抗老化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413186.md#1">在家里赤脚走路好不好？ 看看医生怎么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410211.md#1">冬季洗热水澡竟能致命 浴室中潜藏多重风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14413971.md#1">研究：眼睛大又亮 让别人更愿意掏钱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545002.md#1">【直播】庆美国独立日 华府燃放烟火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/16/n14415219.htm">渥京成立加美关系委员会 应对美方关税威胁</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/16/n14415219.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
